--- a/ClientApp/src/app/app.component.html
+++ b/ClientApp/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div class="container mt-5">
+<app-navbar></app-navbar>
+<div class="container mt-5 mb-5">
     <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
