--- a/ClientApp/src/app/components/import-list/import-list.component.html
+++ b/ClientApp/src/app/components/import-list/import-list.component.html
@@ -1,21 +1,22 @@
 <h1><strong>Nova Importação</strong></h1>
 <hr />
 <div class="input-group">
-    <div class="col-md-11">
+    <div class="col-md-10">
         <div class="custom-file">
             <input (change)="onFileChange($event)" type="file" id="file-input" class="mt-2 form-control-file">
         </div>
     </div>
-    <div class="col-md-1">
+    <div class="col-md-2">
         <div class="input-group-append">
-            <button (click)="onSubmitFile()" class="btn btn-outline-secondary" type="button">Salvar</button>
+            <button (click)="onSubmitFile()" class="btn btn-outline-secondary" type="button">Importar</button>
         </div>
     </div>
 </div>
 <hr />
-<h1 class="mt-5"><strong>Importações</strong></h1>
-<div class="mat-elevation-z4 mt-3">
-    <table class="text-center" mat-table [dataSource]="imports">
+<h1 class="mt-4"><strong>Importações</strong></h1>
+<div class="mat-elevation-z4 mt-1">
+    <table class="text-center" mat-table [dataSource]="dataSource">
+        
         <ng-container matColumnDef="id">
             <th class="text-center" mat-header-cell *matHeaderCellDef>ID</th>
             <td mat-cell *matCellDef="let row">{{row.id}}</td>
@@ -52,4 +53,6 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+    
+    <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
 </div>
