--- a/ClientApp/src/app/components/import/import.component.html
+++ b/ClientApp/src/app/components/import/import.component.html
@@ -2,7 +2,12 @@
 <h2><strong>Data de Importação:</strong> {{import.date | date: 'dd/MM/yyyy'}}</h2>
 <hr />
 <div class="mat-elevation-z4 mt-4">
-    <table mat-table #table [dataSource]="products">
+    <table mat-table #table [dataSource]="dataSource">
+        <ng-container matColumnDef="#">
+            <th mat-header-cell *matHeaderCellDef>#</th>
+            <td mat-cell *matCellDef="let i = index">{{i+1}}</td>
+        </ng-container>
+
         <ng-container matColumnDef="date">
             <th mat-header-cell *matHeaderCellDef>Data de Entrega</th>
             <td mat-cell *matCellDef="let row">{{row.date | date: 'dd/MM/yyyy'}}</td>
@@ -31,4 +36,6 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 15]" showFirstLastButtons></mat-paginator>
 </div>
